Add UnlockReward to Perilous Moon